# dots

./: .gitattributes  .gitignore  README.md  config.default.yaml  main.py  pyproject.toml  runner.py
.vhs/: file.tape  review.tape
commands/: gui.py  status.py  sync.sh
commands/file/: add.sh  diff.sh  forget.sh  git.sh  sync.py  sync.sh
commands/file/list/: managed.sh  pending.sh  unmanaged.sh
commands/health/: check.py  configure.py  delete.py  edit.py  new.py  unconfigure.py
commands/pkg/: add.py  delete.py  edit.py  new.py  review.py  sync.py  uninstall.py
commands/pkg/list/: custom.py  installed.py  pending.py  unmanaged.py
commands/settings/: dump.py  edit.py  query.py
src/: argparsing.py  constants.py  package.py  package_manager.py  package_utils.py  schema.py  settings.py
src/archdots/: __init__.py  argparsing.py  console.py  constants.py  exceptions.py  package.py  package_manager.py  package_parser.py  package_utils.py  schema.py  settings.py  utils.py
src/archdots/gui/: __init__.py  content_updaters.py  main.py
src/archdots/gui/qml/: Breadcrumb.qml  CustomTable.qml  Field.qml  IconButton.qml  Main.qml  PackagePanel.qml  SideBar.qml  StyledButton.qml  qmldir
src/archdots/slint/: __init__.py  main.py
src/archdots/slint/slint/: PackagesView.slint  components.slint  main.slint
src/gui/: __init__.py  main.py
src/gui/qml/: Main.qml  PackagePanel.qml  SideBar.qml  Spacer.qml  StyledButton.qml
