[project]
name = "argparse-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "pydantic>=2.10.2",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "simple-term-menu>=1.6.6",
]

[project.scripts]
runapp = "main:main"
