[project]
name = "archdots"
version = "0.1.0"
description = "simple cli tool for managing dotfiles, packages and configuration scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "dacite>=1.8.1",
    "deepmerge>=2.0",
    "inquirer>=3.4.0",
    "lark>=1.2.2",
    "pyside6==6.8.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "slint>=1.9.2a1",
]

[project.scripts]
dots = "archdots:main"
